# tensor-logic

./: .gitignore  AGENTS.md  CLAIMS.md  CLAUDE.md  CODEX_WORKPAD.md  CONTEXT.md  EXPERIMENTS.md  LICENSE  Makefile  OPENHUMAN_TL_MEMO.md  OPENHUMAN_TL_PROTOTYPE_PLAN.md  README.md  RESEARCH_NOTES.md  SESSION_TRANSCRIPT.md  THE_UNLOCK.md  brief.md  catastrophic_forgetting.py  curiosity_explorer.py  curiosity_gridworld.py  exp10_per_rule_temperature.py  exp11_count_corrected_curiosity.py  exp15_noise_robustness.py  exp16_schema_transfer.py  exp17_multihop_depth.py  exp18_entmax.py  exp21_rule_induction.py  exp25_relational_sleep.py  exp26_combined_rule_sets.py  exp2_semiring_swap.py  exp35_two_tower.py  exp36_code_dependency.py  exp37_tl_inductive_bias.py  exp44_import_closure.py  exp45_pathcount_falsify.py  exp47_size_generalization.py  exp49_crossterm_imports.py  exp4_curiosity_gridworld.py  exp50_cos_parity.py  exp54_big_imports.py  exp5_rule_sparsification.py  (+21 more)
.tldr/: languages.json
benchmarks/: README.md
demos/: lpn_vole_demo.py  program_rules.py  provenance_kb.py  quicksilver_boolean_demo.py  quicksilver_demo.py  tensor_language.py  train_kg.py  zk_einsum.py  zk_graph_reachability.py
docs/: EXPERIMENT_PROVENANCE.md  EXPERIMENT_STATUS.md  PUBLIC_API.md  RUN_PROTOCOL.md  SYMPHONY_RUN_PROTOCOL.md  VALIDATION.md  exp78_rule_induction_spec.md  validation-registry.json
examples/: code_dependencies.tl  permissions.tl  personal_memory.tl  project_planning.tl
experiments/: exp12_semiring_mixture.py  exp13_compositional_rule_injection.py  exp14_sparsemax.py  exp19_per_rule_temperature.py  exp1_temperature_phase_transition.py  exp20_sleeping_agent.py  exp22_es_rule_search.py  exp23_large_scale_genealogy.py  exp24_constraint_sparsemax.py  exp27_blocks_world.py  exp28_unified_system.py  exp29_log_odds.py  exp30_init_fix.py  exp31_surprise_gated.py  exp32_attention_compose.py  exp33_tight_softor.py  exp34_energy_based.py  exp3_generative_replay.py  exp46_shortest_path.py  exp48_crossterm_xor.py  exp48_verify_xor.py  exp51_bignscale.py  (+57 more)
(+178 files in other folders)
