[project]
name = "tensor-logic"
version = "0.1.0"
description = "tensor_logic: deterministic rule engine + provenance proofs (shared library)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.0",
]

[project.optional-dependencies]
dev = [
    "matplotlib>=3.7",
    "numpy>=1.24",
    "pytest>=8.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["tensor_logic*"]
