[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tensor-logic"
version = "0.1.0"
description = "Tensor logic experiments, demos, and reusable reasoning utilities."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "torch>=2.0",
]

[project.scripts]
tensor-logic-workbench = "web_workbench.server:main"

[project.optional-dependencies]
dev = [
    "matplotlib>=3.7",
    "numpy>=1.24",
    "pytest>=8.0",
]
lm = [
    "transformers>=4.40",
]
sft = [
    "accelerate>=0.30",
    "datasets>=2.18",
    "peft>=0.10",
    "transformers>=4.40",
]
science = [
    "scipy>=1.11",
]

[tool.setuptools.packages.find]
include = ["tensor_logic*", "web_workbench*"]

[tool.setuptools.package-data]
web_workbench = ["static/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
